# TradingAgents

./: .gitignore  README.md  pyproject.toml
cli/: app.py  main.py  models.py  prompts.py  stats.py  stats_handler.py  utils.py
results/portfolio/2026-02-08/CSCO/reports/: market_report.md
scripts/: debug_run.py  debug_run.sh
tradingagents/: config.py  default_config.py
tradingagents/agents/: __init__.py  base.py  trader.py
tradingagents/agents/analysts/: fundamentals.py  market.py  news.py  social.py
tradingagents/agents/managers/: research.py  risk.py
tradingagents/agents/researchers/: bear.py  bull.py
tradingagents/agents/risk_debate/: aggressive.py  conservative.py  neutral.py
tradingagents/client/: __init__.py  auth.py  codex.py  types.py
tradingagents/data/: __init__.py  fundamentals.py  market.py  news.py  stockstats_utils.py
tradingagents/memory/: __init__.py  bm25.py
tradingagents/pipeline/: __init__.py  reflection.py  runner.py  signal.py  state.py
tradingagents/portfolio/: __init__.py  allocator.py  models.py  portfolio_advisor.py  screener.py  universes.py
tradingagents/tools/: __init__.py  fundamentals.py  market.py  news.py  registry.py
webui/: __init__.py  app.py  launch.py
